--- a/index.html
+++ b/index.html
@@ -1,21 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DuckMath Portal</title>
-<style>
-  html, body, iframe {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-    overflow: hidden;
-  }
-</style>
-</head>
-<body>
-<iframe id="gameFrame" src="/proxy/duckmath"></iframe>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0"><title>Portal</title><style>html,body,iframe{margin:0;padding:0;width:100%;height:100%;border:none;overflow:hidden}</style></head><body><script>
+(function(_0x5a3d9c,_0x1f4b7e){var _0x3e18=function(_0x2a1bcd){while(--_0x2a1bcd){_0x5a3d9c['push'](_0x5a3d9c['shift']());}};_0x3e18(++_0x1f4b7e);}(['\x63\x72\x65\x61\x74\x65\x45\x6C\x65\x6D\x65\x6E\x74','\x69\x66\x72\x61\x6D\x65','\x73\x65\x74\x41\x74\x74\x72\x69\x62\x75\x74\x65','\x64\x6F\x63\x75\x6D\x65\x6E\x74','\x61\x70\x70\x65\x6E\x64\x43\x68\x69\x6C\x64'],0x0));var _0x1c3b=function(_0x5a3d9c,_0x1f4b7e){_0x5a3d9c=_0x5a3d9c-0x0;var _0x3e18=_0x5a3d9c_array[_0x5a3d9c];return _0x3e18;};(function(){var i=document[_0x1c3b('0x0')](_0x1c3b('0x1'));i[_0x1c3b('0x2')](_0x1c3b('0x3'),"https://duckmath.github.io");document[_0x1c3b('0x4')](i);})();
+</script></body></html>
